# symphony

./: .editorconfig  .gitignore  .tarpaulin.toml  Cargo.toml  README.md  build.rs  download-libtensorflow_cc.sh  libtensorflow_cc
.cargo/: config.toml
.github/workflows/: ci.yml  gpu.yml
resources/mnist/: build-mnist.py  mnist.pb.meta.txt  xtest_1115.txt  xtest_208.txt  xtest_233.txt  xtest_666.txt
src/: lib.rs  msg.capnp
src/backend/: backend.rs  cuda_device.rs  error.rs  mod.rs  model_executor.rs  query.rs
src/backend/tensorflow/: mod.rs  tfwrapper.cc  tfwrapper.h  tfwrapper.rs
src/common/: mod.rs  profile.rs  utils.rs
