[package]
name = "symphony"
version = "0.1.0"
authors = ["Lequn Chen <chenlequn22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.13"
chrono = "0.4"
cuda-runtime-sys = "0.3.0-alpha.1"
cxx = "0.5"
thiserror = "1.0"

[build-dependencies]
capnpc = "0.13"
cxx-build = "0.5"
