[package]
name = "symphony"
version = "0.1.0"
authors = ["Lequn Chen <chenlequn22@gmail.com>"]
edition = "2018"
links = "symphony"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
cxx = "1.0.2"

[build-dependencies]
cxx-build = "1.0.2"
